# tattoo_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_TASK_SPEC.md  Dockerfile.app  MANUAL_TEST.md  README.md  README_WEBAPP.md  TECHNICAL_SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2a0a2c5a8d4f_add_unique_order_start_at.py  6c2a3d4a1c9e_add_tattoo_photo_file_id.py  7e3b4c2a9f10_add_schedule_exceptions_tables.py  9f3c1b2a7d10_add_pricing_config_tables.py  ef9fc6579128_create_core_tables.py
apps/app/: main.py
apps/bot/: main.py  routers.py
core/config/: settings.py
core/logging/: logger.py
core/repositories/: orders.py  pricing.py  schedule_exceptions.py  styles.py  tattoos.py  users.py
core/services/: booking_flow.py  booking_orders.py  calendar_availability.py  calendar_ui.py  menu.py  mode.py  pricing_service.py  schedule.py  webapp_auth_service.py  webapp_context_service.py  webapp_payload.py
docs/: TECHNICAL_SPEC.md  UI_SPEC.md
docs/references/: README.md
infra/db/: session.py
miniapp/: index.html  package-lock.json  package.json
miniapp/src/: App.tsx  styles.css
tests/: test_api_health.py  test_booking_flow.py  test_bot_mode.py  test_calendar_availability.py  test_miniapp_static.py  test_pricing_service.py  test_schedule.py  test_settings.py  test_webapp_auth_endpoint.py  test_webapp_auth_service.py  test_webapp_context_endpoint.py  test_webapp_payload.py  test_webhook_guard.py
tools/precommit/: check_yaml.py  end_of_file_fixer.py  trailing_whitespace.py
(+42 files in other folders)
