[tool.poetry]
name = "tattoo-bot"
version = "0.1.0"
description = "Telegram Bot + FastAPI skeleton"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "apps" },
    { include = "core" },
    { include = "infra" },
]

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.0.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.0"
asyncpg = "^0.31.0"
alembic = "^1.13.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
black = "^24.0.0"
pre-commit = "^3.7.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
